# aemet-visualizer

./: .gitignore  Cargo.toml  LICENSE  Makefile  build.rs
app/: index.html
app/static/: charts.js  data.json
app/static/data/: 1981 - 2010 average (2016 dataset).json  1981 - 2010 average (2017 dataset).json  1981 - 2010 average (2018 dataset).json  1981 - 2010 maximum (2016 dataset).json  1981 - 2010 maximum (2017 dataset).json  1981 - 2010 maximum (2018 dataset).json  1981 - 2010 median (2016 dataset).json  1981 - 2010 median (2017 dataset).json  1981 - 2010 median (2018 dataset).json  1981 - 2010 minimum (2016 dataset).json  1981 - 2010 minimum (2017 dataset).json  1981 - 2010 minimum (2018 dataset).json  1981 - 2010 quintile 1 (2016 dataset).json  1981 - 2010 quintile 1 (2017 dataset).json  1981 - 2010 quintile 1 (2018 dataset).json  1981 - 2010 quintile 2 (2016 dataset).json  1981 - 2010 quintile 2 (2017 dataset).json  1981 - 2010 quintile 2 (2018 dataset).json  1981 - 2010 quintile 3 (2016 dataset).json  1981 - 2010 quintile 3 (2017 dataset).json  1981 - 2010 quintile 3 (2018 dataset).json  1981 - 2010 quintile 4 (2016 dataset).json  1981 - 2010 quintile 4 (2017 dataset).json  1981 - 2010 quintile 4 (2018 dataset).json  2016.json  2017.json  2018.json  schema.json
data/: interesting-stations
data/2016/: Maestro_Climatologico_2016.csv
data/2016/mensuales/: EVAP_2016.csv  E_2016.csv  GLO_2016.csv  HR_2016.csv  INSO_2016.csv  (+39 more)
data/2017/: Maestro_Climatologico_2017.csv
data/2018/: Maestro_Climatologico_2018.csv
src/: formats.rs  lib.rs  main.rs
(+214 files in other folders)
