[package]
name = "aemet-data"
version = "0.1.0"
authors = ["Emilio Cobos Álvarez <emilio@crisal.io>"]
description = "Simple visualizer web app for AEMET's data"
edition = "2018"
license-file = "LICENSE"

[dependencies]
csv = "1"
serde_json = "1"
serde = "1"
serde_derive = "1"

# FIXME: Pending merge of https://github.com/serde-rs/serde/pull/1519
[patch.crates-io]
serde = { git = "https://github.com/emilio/serde", branch = "flat-alias" }
serde_derive = { git = "https://github.com/emilio/serde", branch = "flat-alias" }
